# nojs

./: Cargo.toml
src/: main.rs  media.rs  thread.rs  timeline.rs  utils.rs
templates/: base.html  bottombar.html  home.html  navbar.html  searchbar.html  thread.html  utils.html
