[package]
name = "nojs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
axum = { version = "0.7.4", features = ["macros"] }
chrono = { version = "0.4.34", default-features = false, features = ["now", "std"] }
megalodon = "0.12.3"
serde = { version = "1.0.196", features = ["derive"] }
tokio = { version = "1.36.0", features = ["full"] }
toml = "0.8.10"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
